[package]
name = "rustic_backend"
version = "0.5.6"
authors = ["the rustic-rs team", "Eric E. Gold"]
categories = ["data-structures", "filesystem"]
documentation = "https://docs.rs/rustic_backend"
edition = "2024"
homepage = "https://rustic.cli.rs/"
include = ["src/**/*", "LICENSE-*", "README.md"]
keywords = ["backup", "restic", "deduplication", "encryption", "library"]
license = "Apache-2.0 OR MIT"
publish = true
readme = "README.md"
repository = "https://github.com/rustic-rs/rustic_core/tree/main/crates/backend"
resolver = "3"
rust-version = { workspace = true }
description = """
rustic_backend - library for supporting various backends in rustic-rs
"""

[lib]
path = "src/lib.rs"
name = "rustic_backend"
test = true
doctest = true
bench = true
doc = true
harness = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
rustic_core = { workspace = true }

# errors
bitflags = {workspace = true}
displaydoc = { workspace = true }
thiserror = { workspace = true }
uuid = {workspace = true}

# logging
log = { workspace = true }

# other dependencies
bytes = { workspace = true }
derive_setters = "0.1.8"
humantime = "2.3.0"
itertools = "0.14.0"
strum = "0.27"
strum_macros = "0.27"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util"] }

# general / backend choosing
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.228" }
url = "2.5.7"

bytesize = "2.1.0"
chrono = "0.4.42"
cached = "0.56.0"
ignore = "0.4.25"
dashmap = "6.1.0"

arbhx-core = { workspace = true }
arbhx-sync = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
toml = "0.9.8"
